# spacewaiker.github.io

./: Cargo.toml  Trunk.toml  education.toml  experience.toml  homepage.toml  index.html  input.css  projects.toml  spin.toml  tailwind.config.js  template.toml
.github/workflows/: ci.yml  rust.yml  spin_deploy.yml  spin_preview.yml
content/projects/: test_content1.toml
education/: beng_mcgill.toml  dec_st-lawrence.toml  index.toml  mais_202.toml
experience/: cegep_tutoring.toml  fujitsu.toml  index.toml  mcgill_robotics.toml  motive_ai_s25.toml  rssl.toml  ubisoft_gameplay_w25.toml
locales/: en.yaml  fr.yaml
projects/: airdraw.toml  amulet_of_sirref.toml  c_compiler.toml  cpp_raytracer.toml  crypt-raider.toml  divesafe.toml  index.toml  museum_manager.toml  obstacle-assault.toml  pong.toml  portfolio-v1.toml  portfolio-v2.toml  purposeful.toml  python_raytracer.toml  roll-a-ball.toml  rust_webapp_demo.toml  snake.toml  toontanks.toml
src/: components.rs  data_loading.rs  lib.rs  main.rs  router.rs  utils.rs
src/components/: content.rs  homepage.rs  navigation.rs  page.rs
src/components/content/: content_parts.rs
