[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
cached = { version = "0.51.3", features = ["async", "wasm"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
itertools = "0.13.0"
leptos = { version = "0.6.11", features = ["csr"] }
leptos_meta = { version = "0.6.11", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
markdown = { git = "https://github.com/johannhof/markdown.rs.git", rev = "68ff3f837a24e47219e204b2c420a4f008951387" }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
toml = "0.8.10"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = [
  "HtmlElement",
  "HtmlDocument",
  "HtmlInputElement",
  "EventTarget",
  "MediaQueryList",
] }
